--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bitchat",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/deep-sekhar/bitchat.git",
+  "homepage": "https://github.com/deep-sekhar/bitchat",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
